--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-add-greeting
-        (addGreeting)="onAddGreeting($event)"
-      ></app-add-greeting>
+      <app-add-greeting></app-add-greeting>
       <app-greeting
         *ngFor="let greeting of greetingList"
         [greetingItem]="greeting"
