--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <app-add-greeting></app-add-greeting>
+      <app-success-message></app-success-message>
       <app-greeting
         *ngFor="let greeting of greetingList"
         [greetingItem]="greeting"
