--- a/client/src/app/add-greeting/add-greeting.component.html
+++ b/client/src/app/add-greeting/add-greeting.component.html
@@ -1,5 +1,7 @@
 <div class="input-container">
+  <label for="priorityInput">Priority</label>
   <input
+    id="priorityInput"
     type="number"
     value="1"
     class="form-control"
@@ -7,7 +9,9 @@
   >
 </div>
 <div class="input-container">
+  <label for="titleInput">Priority</label>
   <input
+    id="titleInput"
     type="text"
     value="Hi"
     class="form-control"
