--- a/client/src/app/add-greeting/add-greeting.component.html
+++ b/client/src/app/add-greeting/add-greeting.component.html
@@ -9,7 +9,7 @@
   >
 </div>
 <div class="input-container">
-  <label for="titleInput">Priority</label>
+  <label for="titleInput">Title</label>
   <input
     id="titleInput"
     type="text"
