--- a/client/src/app/greeting/greeting.component.html
+++ b/client/src/app/greeting/greeting.component.html
@@ -2,7 +2,7 @@
   [<a (click)="navigateTo('log')">Logs</a>]
 </div>
 <app-add-greeting></app-add-greeting>
-<app-success-message></app-success-message>
+<div class="mb-20"></div>
 <div
   *ngFor="let greeting of greetingList"
   [greetingItem]="greeting"
