--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -14,3 +14,12 @@ body {
 .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .show>.nav-link { 
   color: blue;
 }
+
+/* Common */
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.mb-20 {
+  margin-bottom: 20px;
+}
