Reorganize org page 1. add a query string, orderBy 2. detail show all fields

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -22,6 +22,7 @@
                   class="nav-link"
                   routerLinkActive="active"
                   [routerLink]="['/log']"
+                  [queryParams]="{orderBy: 'id'}"
                 >Log</a>
               </li>
             </ul>
