--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -23,3 +23,12 @@ body {
 .mb-20 {
   margin-bottom: 20px;
 }
+
+a:link, a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: blue;
+}
