--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.form-control:focus, .form-control:active:focus, .form-control.active:focus {
+  box-shadow: none !important;
+}
+
+.btn:focus, .btn:active:focus, .btn.active:focus {
+  box-shadow: none !important;
+}
