--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,13 +4,16 @@
       <div class="questionnairy-container">
         <h1>Questionnairy</h1>
         <hr>
-        <form>
+        <form (ngSubmit)="onSubmit(questionnarieForm)" #questionnarieForm="ngForm">
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-10">
               <input
                 type="email"
                 class="form-control"
+                ngModel
+                name="email"
+                required
               >
             </div>
           </div>
@@ -20,6 +23,9 @@
               <input
                 type="firstname"
                 class="form-control"
+                ngModel
+                name="firstname"
+                required
               >
             </div>
           </div>
@@ -29,95 +35,49 @@
               <input
                 type="lasttname"
                 class="form-control"
+                ngModel
+                name="lasttname"
+                required
               >
             </div>
           </div>
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Gender</label>
             <div class="col-sm-10">
-              <select id="inputState" class="form-control">
+              <select
+                class="form-control"
+                name="gender"
+                ngModel
+                required
+              >
                 <option selected>Choose...</option>
-                <option>Male</option>
-                <option>Female</option>
+                <option
+                  *ngFor="let gender of genderList"
+                  [value]="gender"
+                >
+                  {{gender}}
+                </option>
               </select>
             </div>
           </div>
           <fieldset class="form-group row">
             <legend class="col-form-label col-sm-2 float-sm-left pt-0">Age</legend>
             <div class="col-sm-10">
-              <div class="form-check">
+              <div
+                class="form-check"
+                *ngFor="let age of ageList"
+                [value]="age"
+              >
                 <input
                   class="form-check-input"
                   type="radio"
                   name="age"
-                  value="child" checked
+                  ngModel
+                  [value]="age"
+                  required
                 >
                 <label class="form-check-label">
-                  Child
-                </label>
-              </div>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="age"
-                  value="teenager"
-                >
-                <label class="form-check-label">
-                  Teenager
-                </label>
-              </div>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="age"
-                  value="young"
-                >
-                <label class="form-check-label">
-                  Young
-                </label>
-              </div>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="age"
-                  value="old"
-                >
-                <label class="form-check-label">
-                  Old
-                </label>
-              </div>
-            </div>
-          </fieldset>
-          <fieldset class="form-group row">
-            <legend class="col-form-label col-sm-2 float-sm-left pt-0">Habit</legend>
-            <div class="col-sm-10">
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                >
-                <label class="form-check-label">
-                  Hiking
-                </label>
-              </div>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                >
-                <label class="form-check-label">
-                  Sports
-                </label>
-              </div><div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                >
-                <label class="form-check-label">
-                  Sleeping
+                  {{age}}
                 </label>
               </div>
             </div>
@@ -127,12 +87,19 @@
             <div class="col-sm-10">
               <textarea
                 class="form-control"
+                name="aboutyou"
+                ngModel
+                required
               ></textarea>
             </div>
           </div>
           <div class="form-group">
             <div class="text-right">
-              <button type="submit" class="btn btn-primary">Sign in</button>
+              <button
+                type="submit"
+                class="btn btn-primary"
+                [disabled]='!questionnarieForm.valid'
+              >Sign in</button>
             </div>
           </div>
         </form>
