--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -14,6 +14,7 @@
                 ngModel
                 name="email"
                 required
+                [(ngModel)]="data.email"
               >
             </div>
           </div>
@@ -26,6 +27,7 @@
                 ngModel
                 name="firstname"
                 required
+                [(ngModel)]="data.firstname"
               >
             </div>
           </div>
@@ -38,6 +40,7 @@
                 ngModel
                 name="lasttname"
                 required
+                [(ngModel)]="data.lastname"
               >
             </div>
           </div>
@@ -49,11 +52,11 @@
                 name="gender"
                 ngModel
                 required
+                [(ngModel)]="data.gender"
               >
                 <option selected>Choose...</option>
                 <option
                   *ngFor="let gender of genderList"
-                  [value]="gender"
                 >
                   {{gender}}
                 </option>
@@ -66,15 +69,14 @@
               <div
                 class="form-check"
                 *ngFor="let age of ageList"
-                [value]="age"
               >
                 <input
                   class="form-check-input"
                   type="radio"
                   name="age"
-                  ngModel
-                  [value]="age"
                   required
+                  [value]="age"
+                 [(ngModel)]="data.age"
                 >
                 <label class="form-check-label">
                   {{age}}
@@ -90,6 +92,7 @@
                 name="aboutyou"
                 ngModel
                 required
+                [(ngModel)]="data.aboutyou"
               ></textarea>
             </div>
           </div>
