--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -11,12 +11,18 @@
               <input
                 type="email"
                 class="form-control"
-                ngModel
                 name="email"
                 email
                 required
+                #email="ngModel"
                 [(ngModel)]="data.email"
               >
+            </div>
+          </div>
+          <div class="form-group row" *ngIf="email.touched && !email.valid">
+            <label class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+              <div class="col-sm-12 alert alert-danger" role="alert">Invalid e-mail</div>
             </div>
           </div>
           <div class="form-group row">
@@ -25,12 +31,18 @@
               <input
                 type="firstname"
                 class="form-control"
-                ngModel
                 name="firstname"
                 pattern="^[a-z0-9_-]{1,10}$"
                 required
+                #firstname="ngModel"
                 [(ngModel)]="data.firstname"
               >
+            </div>
+          </div>
+          <div class="form-group row" *ngIf="firstname.touched && !firstname.valid">
+            <label class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+              <div class="col-sm-12 alert alert-danger" role="alert">Invalid first name</div>
             </div>
           </div>
           <div class="form-group row">
@@ -39,12 +51,18 @@
               <input
                 type="lasttname"
                 class="form-control"
-                ngModel
-                name="lasttname"
+                name="lastname"
                 pattern="^[a-z0-9_-]{1,10}$"
                 required
+                #lastname="ngModel"
                 [(ngModel)]="data.lastname"
               >
+            </div>
+          </div>
+          <div class="form-group row" *ngIf="lastname.touched && !lastname.valid">
+            <label class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+              <div class="col-sm-12 alert alert-danger" role="alert">Invalid last name</div>
             </div>
           </div>
           <div class="form-group row">
