--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -91,6 +91,7 @@
               <button
                 type="submit"
                 class="btn btn-primary"
+                [disabled]="!questionnaireForm.valid"
               >Post</button>
             </div>
           </div>
