--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -16,6 +16,12 @@
               >
             </div>
           </div>
+          <div class="form-group row" *ngIf="questionnaireForm.get('email').touched && !questionnaireForm.get('email').valid">
+            <label class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+              <div class="col-sm-12 alert alert-danger" role="alert">Invalid e-mail</div>
+            </div>
+          </div>
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Firstname</label>
             <div class="col-sm-10">
@@ -27,6 +33,12 @@
               >
             </div>
           </div>
+          <div class="form-group row" *ngIf="questionnaireForm.get('firstname').touched && !questionnaireForm.get('firstname').valid">
+            <label class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+              <div class="col-sm-12 alert alert-danger" role="alert">Invalid first name</div>
+            </div>
+          </div>
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Lastname</label>
             <div class="col-sm-10">
@@ -36,6 +48,12 @@
                 name="lastname"
                 formControlName="lastname"
               >
+            </div>
+          </div>
+          <div class="form-group row" *ngIf="questionnaireForm.get('lastname').touched && !questionnaireForm.get('lastname').valid">
+            <label class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+              <div class="col-sm-12 alert alert-danger" role="alert">Invalid last name</div>
             </div>
           </div>
           <div class="form-group row">
