--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -22,40 +22,42 @@
               <div class="col-sm-12 alert alert-danger" role="alert">Invalid e-mail</div>
             </div>
           </div>
-          <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Firstname</label>
-            <div class="col-sm-10">
-              <input
-                type="firstname"
-                class="form-control"
-                name="firstname"
-                formControlName="firstname"
-              >
+          <ng-container formGroupName="username">
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label">Firstname</label>
+              <div class="col-sm-10">
+                <input
+                  type="firstname"
+                  class="form-control"
+                  name="firstname"
+                  formControlName="firstname"
+                >
+              </div>
             </div>
-          </div>
-          <div class="form-group row" *ngIf="questionnaireForm.get('firstname').touched && !questionnaireForm.get('firstname').valid">
-            <label class="col-sm-2 col-form-label"></label>
-            <div class="col-sm-10">
-              <div class="col-sm-12 alert alert-danger" role="alert">Invalid first name</div>
+            <div class="form-group row" *ngIf="questionnaireForm.get('username.firstname').touched && !questionnaireForm.get('username.firstname').valid">
+              <label class="col-sm-2 col-form-label"></label>
+              <div class="col-sm-10">
+                <div class="col-sm-12 alert alert-danger" role="alert">Invalid first name</div>
+              </div>
             </div>
-          </div>
-          <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Lastname</label>
-            <div class="col-sm-10">
-              <input
-                type="type"
-                class="form-control"
-                name="lastname"
-                formControlName="lastname"
-              >
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label">Lastname</label>
+              <div class="col-sm-10">
+                <input
+                  type="type"
+                  class="form-control"
+                  name="lastname"
+                  formControlName="lastname"
+                >
+              </div>
             </div>
-          </div>
-          <div class="form-group row" *ngIf="questionnaireForm.get('lastname').touched && !questionnaireForm.get('lastname').valid">
-            <label class="col-sm-2 col-form-label"></label>
-            <div class="col-sm-10">
-              <div class="col-sm-12 alert alert-danger" role="alert">Invalid last name</div>
+            <div class="form-group row" *ngIf="questionnaireForm.get('username.lastname').touched && !questionnaireForm.get('username.lastname').valid">
+              <label class="col-sm-2 col-form-label"></label>
+              <div class="col-sm-10">
+                <div class="col-sm-12 alert alert-danger" role="alert">Invalid last name</div>
+              </div>
             </div>
-          </div>
+          </ng-container>
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Gender</label>
             <div class="col-sm-10">
