--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -22,7 +22,7 @@
               >
             </div>
           </div>
-          <div class="form-group row" *ngIf="questionnaireForm.get('email').touched && !questionnaireForm.get('email').valid">
+          <div class="form-group row" *ngIf="email.touched && !email.valid">
             <label class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
               <div class="col-sm-12 alert alert-danger" role="alert">Invalid e-mail</div>
@@ -40,7 +40,7 @@
                 >
               </div>
             </div>
-            <div class="form-group row" *ngIf="questionnaireForm.get('username.firstname').touched && !questionnaireForm.get('username.firstname').valid">
+            <div class="form-group row" *ngIf="firstname.touched && !firstname.valid">
               <label class="col-sm-2 col-form-label"></label>
               <div class="col-sm-10">
                 <div class="col-sm-12 alert alert-danger" role="alert">Invalid first name</div>
@@ -57,7 +57,7 @@
                 >
               </div>
             </div>
-            <div class="form-group row" *ngIf="questionnaireForm.get('username.lastname').touched && !questionnaireForm.get('username.lastname').valid">
+            <div class="form-group row" *ngIf="lastname.touched && !lastname.valid">
               <label class="col-sm-2 col-form-label"></label>
               <div class="col-sm-10">
                 <div class="col-sm-12 alert alert-danger" role="alert">Invalid last name</div>
