--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -15,6 +15,7 @@
             <label class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-10">
               <input
+                appFormStatus
                 type="email"
                 class="form-control"
                 name="email"
