--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -39,6 +39,7 @@
               <label class="col-sm-2 col-form-label">Firstname</label>
               <div class="col-sm-10">
                 <input
+                  appFormStatus
                   type="firstname"
                   class="form-control"
                   name="firstname"
@@ -56,6 +57,7 @@
               <label class="col-sm-2 col-form-label">Lastname</label>
               <div class="col-sm-10">
                 <input
+                  appFormStatus
                   type="type"
                   class="form-control"
                   name="lastname"
