--- a/client/src/app/components/questionnaire/questionnaire/questionnaire.component.html
+++ b/client/src/app/components/questionnaire/questionnaire/questionnaire.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="questionnairy-container">
-        <h1>Questionnairy</h1>
+      <div class="questionnaire-container">
+        <h1>Questionnaire</h1>
         <hr>
         <div class="alert alert-danger" *ngIf="questionnaireForm.errors">
           <span *ngIf="questionnaireForm.errors.invalidUsername">
