--- a/client/src/app/components/success-message/success-message/success-message.component.html
+++ b/client/src/app/components/success-message/success-message/success-message.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-12" style="padding: 32px; text-align: center;">
      <h1>Thank you!</h1>
+     <p><a [routerLink]="['/list']">View list</a></p>
     </div>
   </div>
 </div>
